--- a/404.html
+++ b/404.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <script>
-        sessionStorage.redirect = location.href;
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>404 Not Found</title>
+    <script type="text/javascript">
+        // SPA의 라우터로 리다이렉트
+        window.location.replace(window.location.pathname + ".html");
     </script>
-    <meta http-equiv="refresh" content="0;URL='/24-02-WSD-Assignment-02-Demo/'">
 </head>
+<body>
+    <h1>Page not found</h1>
+</body>
 </html>
