--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
     <!-- Kakao SDK -->
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
-    <script>
+    <script type="module">
       // Kakao SDK 초기화
       if (!window.Kakao.isInitialized()) {
-        window.Kakao.init("372460f39d3db7a89b4f0e8c5e662180"); // Replace with actual key
+        window.Kakao.init("import.meta.env.VITE_KAKAO_JS_KEY"); 
         console.log("Kakao SDK Initialized");
       }
     </script>
